# clean_arquitecture_rust

./: .env  Cargo.toml
src/: config.rs  main.rs
src/auth/: azure_junjired_oauth.rs  microsoft_auth.rs  mod.rs
src/common/: mod.rs
src/common/driving/rest_handler/: mod.rs
src/users/: mod.rs
src/users/domain/: create_user.rs  mod.rs  user.rs
src/users/driving/rest_handler/: users.rs
